--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,9 @@ gendiff = "gendiff.scripts.gendiff:main"
 [tool.uv]
 package = true
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["gendiff"]
