--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,19 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["gendiff"]
+
+[tool.black]
+exclude = '''
+/(
+    \.venv
+  | venv
+  | \.git
+)/
+'''
+
+[tool.isort]
+skip = [".venv", "venv"]
+profile = "black"
+
+[tool.mypy]
+exclude = ['\.venv', 'venv']
