--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -1,9 +1,11 @@
 name: Python CI
 
 on:
-  - push
-  - pull_request:
-      types: [opened, synchronize, reopened]
+  push:
+    branches:
+      - main
+  pull_request:
+    types: [ opened, synchronize, reopened ]
 
 jobs:
   build:
