--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=Imabirdmf_python-project-50
 sonar.organization=imabirdmf
+sonar.python.coverage.reportPaths=coverage.xml
 
 
 # This is the name and version displayed in the SonarCloud UI.
