--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ testpaths = "tests"
 [dependency-groups]
 dev = [
     "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
     "tox>=4.32.0",
     "tox-uv>=1.29.0",
 ]
