--- a/tox.ini
+++ b/tox.ini
@@ -9,4 +9,5 @@ install_project_deps = true
 deps =
     pytest
     pytest-cov
-commands = pytest --cov=my_project --cov-report=xml --cov-config=tox.ini --cov-branch
+commands = pytest --cov --cov-report=xml --cov-config=tox.ini
+
