--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           make test-coverage
       - name: Analyze with SonarQube
-        uses: SonarSource/sonarcloud-github-action@master
+        uses: SonarSource/sonarqube-scan-action@v5.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information
           SONAR_TOKEN: 8d1e4cdf8d0ab6202de6dc194b92907c0a2e0db9   # Generate a token on SonarQube, add it to the secrets of this repo with the name SONAR_TOKEN (Settings > Secrets > Actions > add new repository secret)
@@ -39,3 +39,4 @@ jobs:
             -Dsonar.projectKey=Imabirdmf_python-project-50
             -Dsonar.organization=imabirdmf
             -Dsonar.python.coverage.reportPaths=coverage.xml
+            -Dsonar.host.url=https://sonarcloud.io
