--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=Imabirdmf_python-project-50
 sonar.organization=imabirdmf
-sonar.python.coverage.reportPaths=coverage.xml
+sonar.python.coverage.reportPaths=.coverage-reports/coverage.xml
 sonar.coverage.exclusions=gendiff/__init__.py,gendiff/scripts/gendiff.py
 
 
