--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "hexlet-code"
+name = "gendiff"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -49,4 +49,21 @@ dev = [
     "pytest-cov>=7.0.0",
     "tox>=4.32.0",
     "tox-uv>=1.29.0",
+]
+
+[tool.pytest.ini_options]
+addopts = "--cov=gendiff --cov-report=xml"
+testpaths = ["tests"]
+
+[tool.coverage.run]
+source = ["gendiff"]
+omit = [
+    "gendiff/__init__.py",
+    "gendiff/scripts/*"
+]
+
+[tool.coverage.paths]
+source = [
+    "gendiff",
+    "**/site-packages/gendiff"
 ]
