--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,12 @@
 [tox]
-envlist = py312
+envlist = py
 isolated_build = True
 requires =
     tox-uv>=1.29.0
 
 [testenv]
-install_project_deps = true
 deps =
     pytest
     pytest-cov
-commands = pytest --cov --cov-report=xml --cov-config=tox.ini
+commands = pytest --cov={envsitepackagesdir}/gendiff --cov-report=xml:coverage.xml
 
