--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@ sonar.projectKey=Imabirdmf_python-project-50
 sonar.organization=imabirdmf
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.coverage.exclusions=gendiff/__init__.py,gendiff/scripts/gendiff.py,tests/**
+sonar.tests=tests
 
 
 # This is the name and version displayed in the SonarCloud UI.
