--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=imabirdmf
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.coverage.exclusions=gendiff/__init__.py,gendiff/scripts/gendiff.py,tests/**
 sonar.tests=tests
-onar.sources=gendiff/**
+sonar.sources=gendiff/**
 
 
 # This is the name and version displayed in the SonarCloud UI.
