--- a/tox.ini
+++ b/tox.ini
@@ -8,5 +8,10 @@ requires =
 deps =
     pytest
     pytest-cov
-commands = pytest --cov={envsitepackagesdir}/gendiff --cov-report=xml:coverage.xml
+commands = pytest --cov=gendiff --cov-report=xml:coverage.xml --cov-config=tox.ini --cov-branch
+
+[coverage:run]
+relative_files = True
+source = gendiff/
+branch = True
 
