--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,20 +51,20 @@ dev = [
     "tox-uv>=1.29.0",
 ]
 
-[tool.pytest.ini_options]
-addopts = "--cov=gendiff --cov-report=xml"
-testpaths = ["tests"]
+#[tool.pytest.ini_options]
+#addopts = "--cov=gendiff --cov-report=xml"
+#testpaths = ["tests"]
 
-[tool.coverage.run]
-source = ["gendiff/*"]
-relative_files = true
-omit = [
-    "gendiff/__init__.py",
-    "gendiff/scripts/*"
-]
+#[tool.coverage.run]
+#source = ["gendiff/*"]
+#relative_files = true
+#omit = [
+#    "gendiff/__init__.py",
+#    "gendiff/scripts/*"
+#]
 
-[tool.coverage.paths]
-source = [
-    "gendiff",
-    "**/site-packages/gendiff"
-]
+#[tool.coverage.paths]
+#source = [
+#    "gendiff",
+#    "**/site-packages/gendiff"
+#]
