--- a/tox.ini
+++ b/tox.ini
@@ -8,10 +8,14 @@ requires =
 deps =
     pytest
     pytest-cov
-commands = pytest --cov=gendiff --cov-report=xml:coverage.xml --cov-config=tox.ini --cov-branch
+commands = pytest --cov --cov-report=xml:coverage.xml --cov-config=tox.ini --cov-branch
 
 [coverage:run]
 relative_files = True
 source = gendiff/
 branch = True
+omit =
+    gendiff/__init__.py
+    gendiff/scripts/*
+
 
