--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey=Imabirdmf_python-project-50
 sonar.organization=imabirdmf
 sonar.python.coverage.reportPaths=coverage.xml
-sonar.coverage.exclusions=gendiff/__init__.py,gendiff/scripts/gendiff.py,tests/**
+sonar.coverage.exclusions=gendiff/__init__.py,gendiff/scripts/gendiff.py,tests
 sonar.tests=tests
-sonar.sources=gendiff/**
+sonar.sources=gendiff
 
 
 # This is the name and version displayed in the SonarCloud UI.
