--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,6 @@ sonar.projectKey=Imabirdmf_python-project-50
 sonar.organization=imabirdmf
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.coverage.exclusions=gendiff/__init__.py,gendiff/scripts/gendiff.py,tests
-sonar.tests=tests
-sonar.sources=gendiff
 
 
 # This is the name and version displayed in the SonarCloud UI.
@@ -11,8 +9,8 @@ sonar.sources=gendiff
 #sonar.projectVersion=1.0
 
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+ Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+sonar.sources=.\gendiff
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
