--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.coverage.exclusions=gendiff/__init__.py,gendiff/scripts/gendiff.py,tests
 
 
  Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=/gendiff
+sonar.sources=gendiff
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
