--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=Imabirdmf_python-project-50
 sonar.organization=imabirdmf
 sonar.python.coverage.reportPaths=coverage.xml
-sonar.coverage.exclusions=gendiff/__init__.py,gendiff/scripts/gendiff.py,tests
+sonar.coverage.exclusions=gendiff/__init__.py,gendiff/scripts/*,tests
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=python-project-50
