--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,15 +1,13 @@
 sonar.projectKey=Imabirdmf_python-project-50
 sonar.organization=imabirdmf
 sonar.python.coverage.reportPaths=coverage.xml
-sonar.coverage.exclusions=gendiff/__init__.py,gendiff/scripts/*,tests
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=python-project-50
 #sonar.projectVersion=1.0
 
-
- Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=\gendiff
+sonar.sources=gendiff
+sonar.tests=tests
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
