--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -11,12 +11,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
           python-version: '3.12'
-        # make depends on uv
       - name: Install dependencies
         run: |
           pip install uv
