--- a/ruff.toml
+++ b/ruff.toml
@@ -1,8 +1,11 @@
 line-length = 80
 
+exclude = ["tests"]
+
 [lint.per-file-ignores]
   # init modules can contain the local imports, logic, unused imports
 "__init__.py" = ["F401"]
+
 
 [lint]
 preview = true
