--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 
+dependencies = [
+    "pyyaml>=6.0.3",
+]
+
 [dependency-groups]
 dev = [
     "pytest>=9.0.2",
     "ruff>=0.9.0,<0.9.8",
-    "pyyaml>=6.0.3",
     "pytest-cov>=7.0.0"
 ]
 
